--- a/Example-Objc/WOPCalendarHeaderView.xib
+++ b/Example-Objc/WOPCalendarHeaderView.xib
@@ -24,15 +24,21 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTL-Sc-F35">
-                            <rect key="frame" x="125" y="18" width="30" height="30"/>
-                            <state key="normal" title="&lt;">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTL-Sc-F35">
+                            <rect key="frame" x="105" y="0.0" width="50" height="66"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="2IV-ZE-r6N"/>
+                            </constraints>
+                            <state key="normal" image="wop_calendar_left.png">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zX3-e1-DoA">
-                            <rect key="frame" x="259" y="18" width="30" height="30"/>
-                            <state key="normal" title="&gt;">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zX3-e1-DoA">
+                            <rect key="frame" x="259" y="0.0" width="50" height="66"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="fz9-ks-I3u"/>
+                            </constraints>
+                            <state key="normal" image="wop_calendar_right.png">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                         </button>
@@ -42,9 +48,9 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vAg-Pl-1h3">
-                            <rect key="frame" x="344" y="18" width="46" height="30"/>
-                            <state key="normal" title="Button">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vAg-Pl-1h3">
+                            <rect key="frame" x="370" y="22" width="20" height="22"/>
+                            <state key="normal" image="wop_calendar_date.png">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                         </button>
@@ -59,8 +65,12 @@
                         <constraint firstItem="eOn-uG-h1L" firstAttribute="leading" secondItem="wTL-Sc-F35" secondAttribute="trailing" constant="10" id="aCe-Jf-gjL"/>
                         <constraint firstItem="gMa-ri-de6" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="d5t-nW-gtG"/>
                         <constraint firstItem="eOn-uG-h1L" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="jKj-c6-pBp"/>
+                        <constraint firstItem="wTL-Sc-F35" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="jc9-Zp-vIR"/>
+                        <constraint firstAttribute="bottom" secondItem="wTL-Sc-F35" secondAttribute="bottom" id="mmy-xN-mci"/>
+                        <constraint firstAttribute="bottom" secondItem="zX3-e1-DoA" secondAttribute="bottom" id="o1O-Bc-JZt"/>
                         <constraint firstItem="zX3-e1-DoA" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="wbA-aF-BsG"/>
                         <constraint firstAttribute="trailing" secondItem="vAg-Pl-1h3" secondAttribute="trailing" constant="24" id="xAd-Rc-Oy8"/>
+                        <constraint firstItem="zX3-e1-DoA" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="zgx-KM-1VG"/>
                     </constraints>
                 </view>
             </subviews>
@@ -82,4 +92,9 @@
             <point key="canvasLocation" x="-278" y="-291"/>
         </view>
     </objects>
+    <resources>
+        <image name="wop_calendar_date.png" width="20" height="20"/>
+        <image name="wop_calendar_left.png" width="16" height="16"/>
+        <image name="wop_calendar_right.png" width="16" height="16"/>
+    </resources>
 </document>
